[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.7

[node name="Label" type="Label" parent="Control"]
margin_right = 204.0
margin_bottom = 14.0
text = "Game Title"
align = 1

[node name="Control" type="Control" parent="Control"]
margin_top = 18.0
margin_right = 204.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 25 )

[node name="MenuButtons" type="VBoxContainer" parent="Control"]
margin_top = 47.0
margin_right = 204.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGame" type="Button" parent="Control/MenuButtons"]
margin_right = 204.0
margin_bottom = 20.0
text = "New Game"

[node name="Continue" type="Button" parent="Control/MenuButtons"]
visible = false
margin_right = 204.0
margin_bottom = 20.0
text = "Continue"

[node name="DevRoomIso" type="Button" parent="Control/MenuButtons"]
margin_top = 24.0
margin_right = 204.0
margin_bottom = 44.0
text = "Dev Room - Isometric"

[node name="DevRoomTop" type="Button" parent="Control/MenuButtons"]
margin_top = 48.0
margin_right = 204.0
margin_bottom = 68.0
text = "Dev Room - Top Down"

[node name="DevRoomSide" type="Button" parent="Control/MenuButtons"]
margin_top = 72.0
margin_right = 204.0
margin_bottom = 92.0
text = "Dev Room - Sidescroller"

[node name="Options" type="Button" parent="Control/MenuButtons"]
margin_top = 96.0
margin_right = 204.0
margin_bottom = 116.0
text = "Options"

[node name="Exit" type="Button" parent="Control/MenuButtons"]
margin_top = 120.0
margin_right = 204.0
margin_bottom = 140.0
text = "Exit Game"
